<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/butbc"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:src="@drawable/logobs" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/low_margin"
        android:layout_marginTop="2dp"
        android:text="@string/input"
        android:textAllCaps="false"
        android:textColor="@color/white07"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="@dimen/low_margin"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="@dimen/low_margin"
        android:autofillHints=""
        android:background="@color/white07"
        android:gravity="center"
        android:hint="@string/hint"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#455A64"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/high_margin"
        android:layout_marginTop="@dimen/low_margin"
        android:layout_marginEnd="@dimen/high_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/r2to10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_weight="4"
            android:checked="true"
            android:text="@string/r2to10"
            android:textColor="@color/white07"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/r10to2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_weight="2"
            android:checked="true"
            android:text="@string/r10to2"
            android:textColor="@color/white07"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/convert"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="@dimen/low_margin"
        android:layout_marginTop="@dimen/low_margin"
        android:layout_marginEnd="@dimen/low_margin"
        android:text="@string/text"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/clean"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/Clean"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/low_margin"
        android:layout_marginTop="@dimen/low_margin"
        android:text="@string/output"
        android:textAllCaps="false"
        android:textColor="@color/white07"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/low_margin"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="@dimen/low_margin"
        android:background="@color/white07"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>